<resources>
    <string name="app_name">Moran</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">蓦然</string>
    <string name="title_activity_new_item">NewItemActivity</string>
    <string name="emailText">邮箱：</string>
    <string name="passwordText">密码：</string>
    <string name="loginButton">登录</string>
    <string name="applyAccount">注册新账号</string>
    <string name="seePhoto">查看照片</string>
    <string name="publish_button">发布</string>
    <string name="publish_title">发布照片</string>
    <string name="again_button">重新拍摄</string>
    <string name="again_text">重新拍摄</string>
    <string name="hint_text">你想说的话...</string>
    <string name="my">我的</string>
    <string name="nickname">更改昵称</string>
    <string name="head_image">设置头像</string>
    <string name="sign_out">注销登录</string>
    <string name="rate">评价我们</string>
    <string name="Follow">关注我们</string>
    <string name="home">官方网址</string>
    <string name="square_location_text">太阳系地球</string>
    <string name="square">广场</string>
    <string name="me">我的</string>

    <string-array name="location_arrays">
        <item>附近500米</item>
        <item>附近1000米</item>
        <item>附近2000米</item>
        <item>附近5000米</item>
        <item>全市</item>
    </string-array>

</resources>
