<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="#ef7f42"
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_marginLeft="16dp"
            android:background="#00ffffff"
            android:layout_gravity="center"
            android:src="@drawable/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/publish_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/publishButton"
            android:layout_marginRight="16dp"
            android:layout_gravity="center"
            android:textColor="#ef7f42"
            android:background="@drawable/shape"
            android:gravity="center"
            android:text="@string/publish_button"
            android:textSize="14sp"
            android:layout_width="48dp"
            android:layout_height="30dp" />
    </LinearLayout>
    
    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/nabei"
        android:layout_width="match_parent"
        android:layout_height="210dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="32dp">

        <ImageButton
            android:background="#00ffffff"
            android:src="@drawable/publish_pick"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignTop="@+id/againText"
            android:layout_toLeftOf="@+id/againText"
            android:layout_toStartOf="@+id/againText" />

        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/againText"
            android:layout_centerInParent="true"
            android:text="@string/again_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <View
        android:background="#d4d5d5"
        android:layout_width="match_parent"
        android:layout_height="8dp"/>
    
    <EditText
        android:padding="5dp"
        android:background="@null"
        android:gravity="left"
        android:textSize="12sp"
        android:hint="@string/hint_text"
        android:layout_width="match_parent"
        android:layout_height="74dp" />

    <TextView
        android:textSize="10sp"
        android:layout_margin="5dp"
        android:gravity="right"
        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:background="#d4d5d5"
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="32dp">

        <ImageButton
            android:id="@+id/locationImage"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#00ffffff"
            android:src="@drawable/publish_location"
            android:layout_width="22dp"
            android:layout_height="22dp" />

        <TextView
            android:textSize="12sp"
            android:layout_toRightOf="@id/locationImage"
            android:layout_marginLeft="5dp"
            android:id="@+id/locationText"
            android:layout_centerInParent="true"
            android:text="@string/square_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <View
        android:background="#d4d5d5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



</LinearLayout>